[package]
name = "btc_sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secp256k1 = "0.25"
sha2 = "0.10"
hex = "0.4"
rocksdb = "0.20"
tokio = { version = "1", features = ["full"] }

[lib]
name = "btc_sdk"
path = "src/lib.rs"