[package]
name = "btc_sdk"
version = "0.1.1"
edition = "2021"
authors = ["LunaStev <lunastev@gurmstudis.com>"]
description = "A Rust library for creating Bitcoin-like blockchain systems. It provides functionality for generating the genesis block, managing blockchain data, and preparing for P2P network connections, enabling the development of custom cryptocurrencies."
license = "MPL-2.0"
repository = "https://github.com/LunaStev/Envie"
publish = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secp256k1 = "0.25"
sha2 = "0.10"
hex = "0.4"
rocksdb = "0.20"
tokio = { version = "1", features = ["full"] }

[lib]
name = "btc_sdk"
path = "src/lib.rs"